fix(QCheckbox/QRadio): icon size overflowing container #12837

--- a/ui/src/components/checkbox/QCheckbox.sass
+++ b/ui/src/components/checkbox/QCheckbox.sass
@@ -9,13 +9,13 @@ $checkbox-transition: .22s cubic-bezier(0,0,.2,1) 0ms
 
   &__bg,
   &__icon-container
+    user-select: none
+
+  &__bg
     top: 25%
     left: 25%
     width: 50%
     height: 50%
-    user-select: none
-
-  &__bg
     border: 2px solid currentColor
     border-radius: 2px
     transition: background $checkbox-transition
@@ -23,7 +23,7 @@ $checkbox-transition: .22s cubic-bezier(0,0,.2,1) 0ms
 
   &__icon
     color: currentColor
-    font-size: .6em
+    font-size: .5em
 
   &__svg
     color: #fff
@@ -76,16 +76,12 @@ $checkbox-transition: .22s cubic-bezier(0,0,.2,1) 0ms
 
   &--dense
 
-    .q-checkbox__icon
-      font-size: .6em
-
     .q-checkbox__inner
       width: .5em
       min-width: .5em
       height: .5em
 
-    .q-checkbox__bg,
-    .q-checkbox__icon-container
+    .q-checkbox__bg
       left: 5%
       top: 5%
       width: 90%
